# axi-vid

./: Cargo.toml  README.md
src/: handlers.rs  main.rs  models.rs  state.rs
static/: app.js  index.html  style.css
